Edit payments, export excel extract payments

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -72,6 +72,10 @@ $v-selection-item-border-radius: 0;
     }
   }
 
+  .v-grid-row.error_row > td {
+    background-color: red;
+  }
+
   .time-only .v-inline-datefield-calendarpanel-header,
   .time-only .v-inline-datefield-calendarpanel-body {
     display: none;
