--- a/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -16110,6 +16110,10 @@ div.v-layout.v-horizontal.v-widget {
 	font-size: 15px;
 }
 
+.mytheme .v-grid-row.error_row > td {
+	background-color: red;
+}
+
 .mytheme .time-only .v-inline-datefield-calendarpanel-header, .mytheme .time-only .v-inline-datefield-calendarpanel-body {
 	display: none;
 }
